--- a/css/dark.css
+++ b/css/dark.css
@@ -207,7 +207,7 @@ label:hover:before {
 
 #main {
     position: absolute;
-    top: 112px;
+    top: 120px;
     bottom: 45px;
     overflow: auto;
     /* 滚动 */
@@ -238,6 +238,19 @@ label:hover:before {
     text-align: center;
     padding: 10px 0px;
     border-bottom: 1px solid #ededed;
+    color: white;
+}
+
+.todo-date.expired {
+    background: DimGray;
+}
+
+.todo-date.urgent {
+    background: Maroon;
+}
+
+.todo-date.adequate {
+    background: DarkGreen;
 }
 
 .todo-content {
@@ -290,16 +303,20 @@ label:hover:before {
 
 .todo-text.completed {
     text-decoration: line-through;
-    color: #D9D9D9;
+    color: lightgrey;
     transition: .2s;
 }
 
 .todo-text.completed span {
     text-decoration: none;
-    background: #bbb;
+    background: DimGray !important;
 }
 
-
+.todo-text.editing {
+    border: 1px solid #71ccd5;
+    padding: 5px;
+    margin: 10px 5px 10px 5px;
+}
 
 
 /** Footer */
