--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ label:hover:before {
 
 #main {
     position: absolute;
-    top: 112px;
+    top: 120px;
     bottom: 45px;
     overflow: auto;
     /* 滚动 */
@@ -263,6 +263,19 @@ label:hover:before {
     text-align: center;
     padding: 10px 0px;
     border-bottom: 1px solid #ededed;
+    color: white;
+}
+
+.todo-date.expired {
+    background: SlateGray;
+}
+
+.todo-date.urgent {
+    background: PaleVioletRed;
+}
+
+.todo-date.adequate {
+    background: rgba(47, 175, 47, 0.56);
 }
 
 .todo-content {
@@ -313,6 +326,12 @@ label:hover:before {
     flex-grow: 1;
 }
 
+.todo-text.editing {
+    border: 1px solid #71ccd5;
+    padding: 5px;
+    margin: 10px 5px 10px 5px;
+}
+
 .todo-text.completed {
     text-decoration: line-through;
     color: #D9D9D9;
@@ -321,7 +340,7 @@ label:hover:before {
 
 .todo-text.completed span {
     text-decoration: none;
-    background: #bbb;
+    background: #bbb !important;
 }
 
 
